# voice-translate-mvp

./: .env.example  .gitignore  README.md  pyproject.toml  run_server.py
client/: __init__.py  audio_output.py  list_devices.py  record_once.py  text_demo.py
docs/: architecture.md
server/: __init__.py  audio.py  config.py  engines.py  main.py  models.py  pipeline.py
tests/: test_pipeline.py
tools/: download_models.py
