[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-translate-mvp"
version = "0.1.0"
description = "Local-client and server-side speech translation MVP."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.1.0",
    "httpx[socks]>=0.28.1",
]
translate = [
    "deep-translator>=1.11.4",
]
local-translate = [
    "sentencepiece>=0.2.0",
    "torch>=2.1",
    "transformers>=4.42",
]
tts = [
    "pyttsx3>=2.90",
]
client = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["server*", "client*"]
